src/tests/expand_fn/fail/unknown_fn.tj
module main() = ()
    automaton
        node n 
            b = rec<20>()
        transition